added GA and photo credits

--- a/index.html
+++ b/index.html
@@ -1,6 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-114303256-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-114303256-1');
+</script>
 
 <meta charset="UTF-8">
 <meta http-equiv="X-UA-Compatible" content="IE=Edge">
@@ -42,7 +51,6 @@
                     <span class="icon icon-bar"></span>
                     <span class="icon icon-bar"></span>
                </button>
-               <!-- <a href="#" class="navbar-brand">Stimulus</a> -->
           </div>
 
           <div class="collapse navbar-collapse">
@@ -62,6 +70,7 @@
 <!-- Home Section -->
 
 <section id="home" class="parallax-section">
+          <!-- Photo by Ben Kolde on Unsplash -->
      <div class="container">
           <div class="row">
 
@@ -194,6 +203,7 @@
           <div class="row">
 
                <div class="col-md-6 col-sm-6">
+                    <!-- Photo by William Iven on Unsplash -->
                     <div class="background-image experience-img"></div>
                </div>
 
@@ -210,7 +220,6 @@
                               </div>
                               <div class="media-body">
                                    <h3 class="media-heading">Research Programmer/Analyst <span class="no-desktop"><br></span><span class="nowrap"><small>Jul 2018 - Present</small></span></h3>
-                                   <!-- <p class="color-white">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p> -->
                               </div>
                          </div>
 
@@ -220,7 +229,6 @@
                               </div>
                               <div class="media-body">
                                    <h3 class="media-heading">Web Designer <span class="no-desktop"><br></span><span class="nowrap"><small>Apr 2014 - Jul 2018</small></span></h3>
-                                   <!-- <p class="color-white">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p> -->
                               </div>
                          </div>
 
@@ -230,7 +238,6 @@
                               </div>
                               <div class="media-body">
                                    <h3 class="media-heading">Publications Specialist <span class="no-desktop"><br></span><span class="nowrap"><small>Feb 2009 - Apr 2014</small></span></h3>
-                                   <!-- <p class="color-white">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p> -->
                               </div>
                          </div>
 
@@ -275,7 +282,6 @@
                                    <p class="color-white">Self-paced study through online courses, independent study, and side projects. 
                                         <p class="color-white">Currently enrolled in Amazon Web Services DevOps Certification Courses (Cloud Academy).</p>
                                         <p class="color-white">Recently completed Android Basics Nanodegree (Udacity).</p>
-                                        <!-- <p class="color-white">Current side project involves Android development of an interactive app to be launched in the Google Play store in Spring 2020.</p> -->
                                    </p>
                               </div>
                          </div>
@@ -284,6 +290,7 @@
                </div>
 
                <div class="col-md-6 col-sm-6">
+                         <!--- Photo by 🇸🇮 Janko Ferlič - @specialdaddy on Unsplash -->
                     <div class="background-image education-img"></div>
                </div>
 
@@ -295,6 +302,7 @@
 <!-- Blog Section -->
 
 <section id="blog" class="parallax-section">
+     <!-- Photo by Daniel McCullough on Unsplash -->
      <div class="overlay"></div>
      <div class="container">
           <div class="row">
@@ -354,7 +362,8 @@
 
                          <div id="contact-form">
                               <form name="emailForm" method="post">
-                                        <p id="validate" style="color: #161616;font-weight: 400;display:none;">All fields are required</p>
+                                        <p id="validate" style="color: #161616;font-weight: 400;display:none;">All fields are required.</p>
+                                        <p id="sent" style="color: #161616;font-weight: 400;display:none;">Your message has been sent!</p>
                                    <div class="wow fadeInUp" data-wow-delay="1s">
                                         <input name="fullname" type="text" class="form-control" id="fullname" placeholder="Your Name" required>
                                    </div>
@@ -374,6 +383,7 @@
                </div>
 
                <div class="col-md-3 col-sm-6">
+                    <!--- Photo by NordWood Themes on Unsplash -->
                     <div class="background-image contact-img"></div>
                </div>
 
@@ -414,8 +424,6 @@
                <div class="col-md-12 col-sm-12">
                     <div class="wow fadeInUp footer-copyright" data-wow-delay="1.8s">
                          <p>Copyright &copy; 2019 Grumpy Bunny Dev
-                    
-                    <!-- | Design: <a href="http://www.google.com/+templatemo" target="_parent">templatemo</a></p> -->
                     </div>
                </div>
 			
