--- a/index.html
+++ b/index.html
@@ -374,7 +374,7 @@
                                         <textarea name="message" rows="5" class="form-control" id="message" placeholder="Write your message..." required></textarea>
                                    </div>
                                    <div class="wow fadeInUp col-md-6 col-sm-8" data-wow-delay="1.6s">
-                                        <input name="submit" type="submit" class="form-control" id="submit" value="Send">
+                                        <input name="submit" type="button" class="form-control" id="submit" value="Send">
                                    </div>
                               </form>
                          </div>
