--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
                     <div class="wow fadeInUp color-white service-thumb" data-wow-delay="1.6s">
                          <i class="fas fa-code"></i>
                               <h3>Coding</h3>
-                              <p class="color-white">Websites are creations of art. Exquisite design deserves equally exquisite functionality.</p>
+                              <p class="color-white">Websites are creations of art.<br>Exquisite design deserves equally exquisite functionality.</p>
                     </div>
                </div>
 
@@ -187,7 +187,7 @@
                     <div class="wow fadeInUp service-thumb" data-wow-delay="1.8s">
                          <i class="fab fa-html5"></i>
                               <h3>Engaging Experience</h3>
-                              <p>While a well executed design attracts the user, a well executed experience keeps the user engaged.</p>
+                              <p>A well executed design attracts the user.<br>A well executed experience keeps the user engaged.</p>
                     </div>
                </div>
 
@@ -280,7 +280,8 @@
                               <div class="media-body">
                                    <h3 class="media-heading"><span class="nowrap">Continuing Education</span> <span class="no-desktop"><br></span><small>Ongoing</small></h3>
                                    <p class="color-white">Self-paced study through online courses, independent study, and side projects. 
-                                        <p class="color-white">Currently enrolled in Amazon Web Services DevOps Certification Courses (Cloud Academy).</p>
+                                        <p class="color-white">Currently enrolled in Amazon Web Services DevOps Certification courses (Cloud Academy).</p>
+                                        <p class="color-white">Currently enrolled in React.js and Node.js courses (Pluralsight).</p>
                                         <p class="color-white">Recently completed Android Basics Nanodegree (Udacity).</p>
                                    </p>
                               </div>
