--- a/index.html
+++ b/index.html
@@ -281,7 +281,7 @@
                                    <h3 class="media-heading"><span class="nowrap">Continuing Education</span> <span class="no-desktop"><br></span><small>Ongoing</small></h3>
                                    <p class="color-white">Self-paced study through online courses, independent study, and side projects. 
                                         <p class="color-white">Currently enrolled in Amazon Web Services DevOps Certification courses (Cloud Academy).</p>
-                                        <p class="color-white">Currently enrolled in React.js and Node.js courses (Pluralsight).</p>
+                                        <p class="color-white">Currently enrolled in React.js courses (Scrimba).</p>
                                         <p class="color-white">Recently completed Android Basics Nanodegree (Udacity).</p>
                                    </p>
                               </div>
