--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 <meta name="author" content="Cheryl Velez">
 <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 
-<title>Cheryl Velez - Web Developer, UX Designer, Photographer</title>
+<title>Cheryl Velez - Web Developer, Web Experience Designer, Photographer</title>
 <link rel="stylesheet" href="css/bootstrap.min.css">
 <link rel="stylesheet" href="css/animate.css">
 <link rel="stylesheet" href="fonts/css/all.css">
@@ -84,8 +84,11 @@
                               <h4 class="wow fadeInUp" data-wow-delay="0.3s">welcome to my website</h4>
                               <h1 class="wow fadeInUp" data-wow-delay="0.6s">Hello, I am <strong>Cheryl&nbsp;Velez</strong> currently based in Alexandria, Virginia.</h1>
                               <p class="wow fadeInUp" data-wow-delay="0.9s"></p>
-                              <h3>I have two passions, coding stunning web experiences and digital photography.</h3>
-                              <p><a href="#whatIDo" class="wow fadeInUp smoothScroll section-btn btn btn-success" data-wow-delay="1.4s">Web Development</a> <a href="http://www.snappingbeauty.com/" class="wow fadeInUp smoothScroll section-btn btn btn-success" data-wow-delay="1.4s">Photography Portfolio</a></p>
+                              <h3>I have two passions, developing stunning web experiences and digital photography.</h3>
+                              <h3><a href="#whatIDo" class="wow fadeInUp smoothScroll" data-wow-delay="1.4s">Read More</a></h3>
+                              <p><a href="https://github.com/onegrumpybunny" target="_blank" class="wow fadeInUp smoothScroll section-btn btn btn-success" data-wow-delay="1.4s">Web Development Portfolio</a> </p>
+                              <p><a href="https://codepen.io/onegrumpybunny" target="_blank" class="wow fadeInUp smoothScroll section-btn btn btn-success" data-wow-delay="1.4s">Coding Playground</a></p>
+                              <p><a href="http://www.snappingbeauty.com/" target="_blank" class="wow fadeInUp smoothScroll section-btn btn btn-success" data-wow-delay="1.4s">Photography Portfolio</a></p>
                               
                          </div>
                     </div>
@@ -126,23 +129,24 @@
 
                          <div class=" wow fadeInUp skills-thumb" data-wow-delay="1.6s">
 
-                         <strong>HTML5, CSS3,JavaScript</strong>
+                         <strong>HTML5, CSS3, JavaScript</strong>
                               <span class="color-white pull-right">90%</span>
                                    <div class="progress">
                                         <div class="progress-bar progress-bar-primary" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100" style="width: 90%;"></div>
                                    </div>
 
-                         <strong>Frontend Design</strong>
+                         <strong>Front-end Design</strong>
                               <span class="color-white pull-right">80%</span>
                                    <div class="progress">
                                         <div class="progress-bar progress-bar-primary" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100" style="width: 80%;"></div>
                                    </div>
 
-                         <strong>Backend processing</strong>
+                         <strong>Back-end processing</strong>
                               <span class="color-white pull-right">80%</span>
                                    <div class="progress">
                                         <div class="progress-bar progress-bar-primary" role="progressbar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100" style="width: 80%;"></div>
                                    </div>
+                         <strong>Download <a style="color:#000;font-weight:800;cursor:pointer;" id="resume">my resume</a></strong><br><span id="invalid" style="display:none;">Invalid passcode.</span>
                          </div>
 
                     </div>
