Added portfolio item

--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
                 <a href="https://www.linkedin.com/in/cheryl-velez-a781818/" target="_blank"><img src="images/linkedin.svg"></a>
                 <a href="https://github.com/OneGrumpyBunny/" target="_blank"><img src="images/github.svg"></a>
                 <a href="https://twitter.com/onegrumpybunny/" target="_blank"><img src="images/twitter.svg"></a>
+                <a href="https://codepen.io/onegrumpybunny" target="_blank"><img src="images/codepen.svg"></a>
             </div>
         </div>
     </div>
@@ -76,6 +77,13 @@
                 <div class="overlay">
                   <p>Front-end Development, Animations</p>
                   <p class="line">Client Project <a href="play/space-infographic/" target="_blank">Live Demo</a></p>
+                </div>
+            </div>
+            <div class="swiper-slide">
+                <img src="images/portfolio/needs-calculator.jpg">
+                <div class="overlay">
+                  <p>Front-end Development, Component Library, Animations</p>
+                  <p class="line">Internal Project <a href="https://codepen.io/collection/dbWyOJ" target="_blank">Component Demos</a></p>
                 </div>
             </div>
             <div class="swiper-slide">
