--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
                 </div>
             </div>
             <div class="swiper-slide">
-                <img src="images/portfolio/needs-calculator.jpg">
+                <img src="images/portfolio/athene.jpg">
                 <div class="overlay">
                   <p>Front-end Development, Component Library, Animations</p>
                   <p class="line">Internal Project <a href="https://codepen.io/collection/dbWyOJ" target="_blank">Component Demos</a></p>
