--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             beautiful, highly interactive, engaging, and user-focused web 
             experiences.</p></div>
         <div class="contact">
-            <p>Myrtle Beach, South Carolina<br>
+            <p>Cheryl Velez<br>Myrtle Beach, SC<br>
                 <a href="Cheryl-Velez-Resume.pdf">Resume/CV</a></p>
             <div class="social">
                 <a href="mailto:cheryl@cherylvelez.com?subject=Message from cherylvelez.com"><img src="images/envelope.svg"></a>
@@ -161,6 +161,13 @@
                 <div class="overlay">
                   <p>Logo Design for Print</p>
                   <p class="line">Side Project</p>
+                </div>
+            </div>
+            <div class="swiper-slide">
+                <img src="images/portfolio/photo-gallery-thumb.jpg">
+                <div class="overlay">
+                  <p>Amature Photography</p>
+                  <p class="line">Hobby <a href="https://www.flickr.com/photos/snappingbeauty/albums/" target="_blank">Gallery</a></p>
                 </div>
             </div>
         </div>
