--- a/index.html
+++ b/index.html
@@ -97,14 +97,14 @@
                 <img src="images/portfolio/commercial-break-thumb.jpg">
                 <div class="overlay">
                   <p>Mockup, Layout, Back-end Development</p>
-                  <p class="line">Side Project <a href="http://ogb-commercial-break.herokuapp.com/" target="_blank">Live Demo (Mobile App)</a></p>
+                  <p class="line">Mobile App <a href="http://ogb-commercial-break.herokuapp.com/" target="_blank">Live Demo</a></p>
                 </div>
             </div>
             <div class="swiper-slide">
                 <img src="images/portfolio/inspire-thumb.jpg">
                 <div class="overlay">
                   <p>Mockup, Layout, Back-end Development </p>
-                  <p class="line">Side Project (Currently in development)</p>
+                  <p class="line">Mobile App (Currently in development)</p>
                 </div>
             </div>
             <div class="swiper-slide">
